--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
