--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.2.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase": "^8.0.2",
     "mongoose": "^5.10.15",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
